kubernetes/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: snowflake-web-app-service
  namespace: demo-namespace
spec:
  selector:
    app: snowflake-web-app
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 9090
      nodePort: 31525
      name: http
  type: LoadBalancer
        #NodePort
        #LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowflake-web-app
  namespace: demo-namespace
spec:
  selector:
    matchLabels:
      app: snowflake-web-app
  replicas: 1
  template:
    metadata:
      labels:
        app: snowflake-web-app
    spec:
      #volumes:
      #  - name: log-path
          #hostPath:
          #  path: /Users/pl465j/Documents/KubeFlaskApp/log
       #   persistentVolumeClaim:
       #     claimName: task-pv-claim
      containers:
      - name: snowflake-web-app
        image: snowflake_web_app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9090
