kubernetes/sf-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sf-app-ingress
  namespace: demo-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: snowflake-web-app-service
            port:
              number: 8085
